# wasmind

./: .dockerignore  .gitignore  Cargo.toml  DOCUMENTATION_PLAN.md  LICENSE  LLM.md  README.md  TEST_COVERAGE_PLAN.md  TODO.md  TODO.old  default_config.toml  headless_config.toml
actors/assistant/: Cargo.toml  Hive.toml  README.md  Wasmind.toml
actors/assistant/src/: bindings.rs  lib.rs  system_prompt.rs
actors/assistant/wit/: world.wit
actors/code_with_experts/: Cargo.toml  README.md
actors/code_with_experts/crates/approve/: Cargo.toml  README.md  Wasmind.toml
actors/code_with_experts/crates/code_with_experts_common/: Cargo.toml
actors/code_with_experts/crates/file_interaction_with_approval/: Cargo.toml  Hive.toml  README.md  Wasmind.toml
actors/code_with_experts/crates/request_changes/: Cargo.toml  README.md  Wasmind.toml
actors/conversation_compaction/: Cargo.toml  README.md  Wasmind.toml
actors/conversation_compaction/src/: bindings.rs  lib.rs
actors/conversation_compaction/wit/: world.wit
actors/delegation_network/: Cargo.toml  README.md
actors/delegation_network/crates/check_health/: Cargo.toml  Hive.toml  README.md  Wasmind.toml
actors/delegation_network/crates/common_types/: Cargo.toml
actors/delegation_network/crates/complete/: Cargo.toml  Hive.toml  README.md  Wasmind.toml
actors/delegation_network/crates/delegation_network_coordinator/: Cargo.toml  Hive.toml  HiveConfig.toml  README.md  Wasmind.toml
actors/delegation_network/crates/flag_issue/: Cargo.toml  Hive.toml  README.md  Wasmind.toml
actors/delegation_network/crates/main_manager/: Cargo.toml  Hive.toml
actors/delegation_network/crates/planner/: Cargo.toml  Hive.toml  README.md  Wasmind.toml
actors/delegation_network/crates/report_normal/: Cargo.toml  Hive.toml  README.md  Wasmind.toml
actors/delegation_network/crates/send_manager_message/: Cargo.toml  Hive.toml  README.md  Wasmind.toml
actors/delegation_network/crates/send_message/: Cargo.toml  Hive.toml  README.md  Wasmind.toml
actors/delegation_network/crates/spawn_agent/: Cargo.toml  Hive.toml  README.md  Wasmind.toml
actors/delegation_network/crates/wait/: Cargo.toml  Hive.toml  README.md  Wasmind.toml
actors/delegation_network/crates/worker/: Cargo.toml  Hive.toml
actors/execute_bash/: Cargo.toml  Hive.toml  README.md  Wasmind.toml
actors/execute_bash/src/: bindings.rs  icons.rs  lib.rs
actors/execute_bash/wit/: world.wit
actors/file_interaction/: Cargo.toml  README.md
actors/file_interaction/crates/file_interaction/: Cargo.toml
actors/file_interaction/crates/file_interaction_actor/: Cargo.toml  Hive.toml  README.md  Wasmind.toml
actors/file_interaction/src/: bindings.rs  lib.rs
actors/file_interaction/wit/: world.wit
actors/review_plan/: Cargo.toml  README.md
actors/review_plan/crates/request_plan_review/: Cargo.toml  README.md  Wasmind.toml
actors/review_plan/crates/review_plan/: Cargo.toml  README.md  Wasmind.toml
actors/review_plan/crates/review_plan_common/: Cargo.toml
actors/test_spawner/: Cargo.toml
actors/test_spawner/src/: lib.rs
crates/actor_execute_bash/: Cargo.toml
crates/actor_execute_bash/src/: lib.rs
crates/hive/: Cargo.toml  README.md
crates/hive/src/: cli.rs  config.rs  context.rs  coordinator.rs  hive.rs  key_bindings.rs  lib.rs  litellm_manager.rs  llm_client.rs  main.rs  prompt_preview.rs  scope.rs  system_state.rs  template.rs  utils.rs
crates/hive/src/actors/: agent.rs  assistant.rs  context.rs  (+5 more)
crates/hive_actor_loader/: Cargo.toml  README.md
crates/hive_actor_loader/src/: dependency_resolver.rs  lib.rs
crates/hive_actor_loader/tests/: actor_overrides_test.rs  circular_dependency_test.rs  dependency_resolver_test.rs  error_handling_test.rs  required_spawn_with_test.rs
crates/hive_actor_utils/: Cargo.toml  README.md
crates/hive_actor_utils/src/: actors.rs  lib.rs  messages.rs  tools.rs
crates/hive_actor_utils_common_messages/: Cargo.toml  README.md
crates/hive_actor_utils_common_messages/src/: lib.rs
crates/hive_cli/: Cargo.toml  README.md  default_config.toml
crates/hive_cli/example_configs/: code_with_experts.toml  delegation_network.toml
crates/hive_cli/src/: cli.rs  config.rs  lib.rs  litellm_manager.rs  main.rs
crates/hive_config/: Cargo.toml  README.md
crates/hive_config/src/: lib.rs
crates/hive_llm_client/: Cargo.toml
crates/hive_llm_client/src/: client.rs  lib.rs
crates/hive_macros/: Cargo.toml
crates/hive_macros/src/: lib.rs
crates/hive_tui/: Cargo.toml  default_config.toml
crates/hive_tui/src/: cli.rs  commands.rs  config.rs  lib.rs  litellm_manager.rs  main.rs  utils.rs
crates/wasmind/: Cargo.toml  README.md
crates/wasmind/src/: context.rs  coordinator.rs  lib.rs  utils.rs
crates/wasmind/wit/: world.wit
crates/wasmind_actor_bindings/: Cargo.toml  README.md
crates/wasmind_actor_bindings/src/: bindings.rs  lib.rs
crates/wasmind_actor_bindings/wit/: world.wit
crates/wasmind_actor_loader/: Cargo.toml  README.md
crates/wasmind_actor_loader/src/: dependency_resolver.rs  lib.rs  utils.rs
crates/wasmind_actor_loader/tests/: actor_overrides_test.rs  cache_manifest_test.rs  circular_dependency_test.rs  dependency_resolver_test.rs  error_handling_test.rs  git_clone_optimization_test.rs  required_spawn_with_test.rs
crates/wasmind_actor_utils/: Cargo.toml  README.md
crates/wasmind_actor_utils/src/: actors.rs  lib.rs  messages.rs  tools.rs  utils.rs
crates/wasmind_actor_utils_common_messages/: Cargo.toml  README.md
crates/wasmind_actor_utils_common_messages/src/: lib.rs
crates/wasmind_actor_utils_macros/: Cargo.toml  README.md
crates/wasmind_actor_utils_macros/src/: lib.rs
crates/wasmind_cli/: Cargo.toml  README.md
crates/wasmind_cli/example_configs/: README.md  assistant.toml  code_with_experts.toml  delegation_network.toml
crates/wasmind_cli/src/: cli.rs  config.rs  lib.rs  litellm_manager.rs  main.rs  utils.rs
crates/wasmind_config/: Cargo.toml  README.md
crates/wasmind_config/src/: lib.rs
crates/wasmind_llm_types/: Cargo.toml  README.md
crates/wasmind_llm_types/src/: lib.rs
(+359 files in other folders)
