[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
description = ""
repository = "https://github.com/SilasMarvin/hive"
readme = "README.md"
authors = ["Silas Marvin <silas.marvin@dmarvin.net>"]

[profile.release]
incremental = true
# Set this to 1 or 2 to get more useful backtraces in debugger.
debug = 0
