[workspace]
members = ["crates/*"]
# It seems we can't use wildcards in the exclude array
exclude = ["actors/execute_bash", "actors/assistant", "actors/test_spawner", "actors/delegation_network", "actors/file_interaction"]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
description = "A modular AI agent coordination system for building massively parallel agentic systems"
repository = "https://github.com/SilasMarvin/wasmind"
readme = "README.md"
authors = ["Silas Marvin <silas.marvin@dmarvin.net>"]

[workspace.dependencies]
tokio = { version = "1.45.0" }
serde = { version = "1" }
wasmtime = { version = "36.0.2", features = ["async"] }
wasmtime-wasi = "36.0.2"
serde_json = "1.0.140"
serde_yaml = "0.9"
reqwest = { version = "0.12", features = ["json"] }
wit-bindgen-rt = { version = "0.43", features = ["bitflags"] }
snafu = "0.8"
url = "2.5"
tempfile = "3.8"
chrono = { version = "0.4", features = ["serde"] }
toml = "0.9"
parking_lot = "0.12"

[profile.profiling]
inherits = "release"
debug = true
