[package]
name = "assistant"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = ""
repository = "https://github.com/SilasMarvin/hive"
readme = "README.md"
authors = ["Silas Marvin <silas.marvin@dmarvin.net>"]

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen-rt = { version = "0.43", features = ["bitflags"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
uuid = "1.0"
tracing = "0.1"
minijinja = "2.5"
regex = "1.10"

hive_actor_utils = { path = "../../crates/hive_actor_utils", features = ["macros"] }

[package.metadata.component.target.dependencies]
"hive:actor" = { path = "../../crates/hive_actor_bindings/wit" }
