[package]
name = "conversation_compaction"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
wasmind_actor_utils = { path = "../../crates/wasmind_actor_utils", features = ["macros"] }
wit-bindgen-rt = "0.43.0"

[lib]
crate-type = ["cdylib"]

[package.metadata.component.target.dependencies]
"wasmind:actor" = { path = "../../crates/wasmind_actor_bindings/wit" }

[profile.release]
opt-level = "s"