[workspace]
members = ["crates/*"]
exclude = []
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
description = ""
repository = "https://github.com/SilasMarvin/hive"
readme = "README.md"
authors = ["Silas Marvin <silas.marvin@dmarvin.net>"]

[workspace.dependencies]
hive_actor_utils = { path = "../../crates/hive_actor_utils", features = ["macros"] }

serde = { version = "1", features = ["derive"] }
toml = "0.8.22"
wit-bindgen-rt = { version = "0.43", features = ["bitflags"] }
