[package]
name = "actor_execute_bash"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = ""
repository = "https://github.com/SilasMarvin/hive"
readme = "README.md"
authors = ["Silas Marvin <silas.marvin@dmarvin.net>"]

[dependencies]
wit-bindgen-rt = { version = "0.43", features = ["bitflags"] }

hive_actor_bindings = { path = "../../crates/hive_actor_bindings" }

[lib]
crate-type = ["cdylib"]
