[workspace]
members = ["crates/*"]
exclude = []
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
description = "Plan review and approval system for AI agent workflows"
repository = "https://github.com/SilasMarvin/wasmind"
readme = "README.md"
authors = ["Silas Marvin <silas.marvin@dmarvin.net>"]

[workspace.dependencies]
wasmind_actor_utils = { path = "../../crates/wasmind_actor_utils", features = ["macros"] }
review_plan_common = { path = "crates/review_plan_common" }

serde = { version = "1", features = ["derive"] }
toml = "0.9"
wit-bindgen-rt = { version = "0.43", features = ["bitflags"] }