[package]
name = "hive_actor_utils"
version = "0.1.0"

description.workspace = true
repository.workspace = true
readme.workspace = true
edition.workspace = true
license.workspace = true

[lib]

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

hive_actor_bindings = { path = "../hive_actor_bindings" }
