[package]
name = "hive_actor_utils"
version = "0.1.0"

description.workspace = true
repository.workspace = true
readme.workspace = true
edition.workspace = true
license.workspace = true

[lib]

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
rand = "0.9"

hive_llm_types = { path = "../hive_llm_types" }
hive_actor_utils_common_messages = { path = "../hive_actor_utils_common_messages" }
hive_actor_utils_macros = { path = "../hive_actor_utils_macros", optional = true }

[features]
default = []
macros = ["hive_actor_utils_macros"]
