[package]
name = "hive_actor_utils_common_messages"
version = "0.1.0"

description.workspace = true
repository.workspace = true
readme.workspace = true
edition.workspace = true
license.workspace = true

[lib]

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

hive_llm_types = { path = "../hive_llm_types" }
