[package]
name = "hive_config"
version = "0.1.0"

description.workspace = true
repository.workspace = true
readme.workspace = true
edition.workspace = true
license.workspace = true

[lib]

[dependencies]
snafu = { workspace = true }
url = { workspace = true, features = ["serde"] }
toml = { workspace = true }
serde = { workspace = true, features = ["derive"] }

etcetera = "0.10.0"

[dev-dependencies]
tempfile = { workspace = true }

