[package]
name = "hive_llm_client"
version = "0.1.0"

description.workspace = true
repository.workspace = true
readme.workspace = true
edition.workspace = true
license.workspace = true

[lib]

[dependencies]
snafu = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

reqwest = { workspace = true, optional = true }

[features]
default = []
client = ["reqwest"]
