[package]
name = "hive_macros"
version = "0.1.0"

description.workspace = true
repository.workspace = true
readme.workspace = true
edition.workspace = true
license.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full", "derive", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"

# Optional: for better error messages
proc-macro-error = "1.0"
