[package]
name = "hive_tui"
version = "0.1.0"

description.workspace = true
repository.workspace = true
readme.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
snafu = { workspace = true }
url = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

hive = { path = "../hive" }
hive_config = { path = "../hive_config" }

rand = "0.9"
throbber-widgets-tui = "0.8"
lazy-regex = "3.4.1"
hive_macros = { path = "../hive_macros" }
base64 = "0.22.1"
etcetera = "0.10.0"
image = "0.25.6"
toml = { workspace = true }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
futures = "0.3.31"
rmcp = { git = "https://github.com/modelcontextprotocol/rust-sdk", branch = "main", features = ["server", "transport-child-process", "client"] }
libc = "0.2"
ratatui = { version = "0.29", features = ["unstable-rendered-line-info", "unstable-widget-ref"] }
chrono = { version = "0.4", features = ["serde"] }
minijinja = { version = "2.6", features = ["builtins"] }
clap = { version = "4.0", features = ["derive"] }
async-trait = "0.1"
tuirealm = { version = "3", default-features = false, features = [ "derive", "crossterm", "async-ports"]}
serde_yaml = "0.9"
tempfile = "3"
tui-textarea = "^0.7"
