[package]
name = "wasmind"
version = "0.1.0"

description.workspace = true
repository.workspace = true
readme.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "wasmind"

[features]
default = []
test-utils = []

[dependencies]
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["rt-multi-thread", "time", "process", "sync", "signal"] }
serde_json = { workspace = true }
reqwest = { workspace = true }
wasmtime = { workspace = true }
wasmtime-wasi = { workspace = true }
snafu = { workspace = true }

wasmind_actor_loader = { path = "../wasmind_actor_loader" }
wasmind_config = { path = "../wasmind_config" }
wasmind_llm_types = { path = "../wasmind_llm_types" }
wasmind_actor_utils = { path = "../wasmind_actor_utils" }

rand = "0.9"
throbber-widgets-tui = "0.8"
lazy-regex = "3.4.1"
base64 = "0.22.1"
etcetera = "0.10.0"
image = "0.25.6"
toml = { workspace = true }
tracing = "0.1.41"
futures = "0.3.31"
rmcp = { git = "https://github.com/modelcontextprotocol/rust-sdk", branch = "main", features = ["server", "transport-child-process", "client"] }
libc = "0.2"
ratatui = { version = "0.29", features = ["unstable-rendered-line-info", "unstable-widget-ref"] }
chrono = { version = "0.4", features = ["serde"] }
minijinja = { version = "2.6", features = ["builtins"] }
clap = { version = "4.0", features = ["derive"] }
async-trait = "0.1"
tuirealm = { version = "3", default-features = false, features = [ "derive", "crossterm", "async-ports"]}
serde_yaml = "0.9"
tempfile = "3"
tui-textarea = "^0.7"

# # Optional GUI dependencies
# arboard = { version = "3.5.0", optional = true }
# xcap = { version = "0.5.2", optional = true }
#
# # Optional audio dependencies  
# whisper-rs = { version = "0.14.2", features = ["metal"], optional = true }
# cpal = { version = "0.15.3", optional = true }
# hound = { version = "3.5.1", optional = true }
# rubato = { version = "0.16.2", optional = true }

[dev-dependencies]
pathdiff = "0.2"
wiremock = "0.6"
