[package]
name = "wasmind_actor_bindings"
version = "0.1.0"

description = "WebAssembly component model bindings for Wasmind actors"
repository.workspace = true
readme = "README.md"
edition.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/wasmind_actor_bindings"

[dependencies]
wit-bindgen-rt = { workspace = true }

[lib]
