[package]
name = "wasmind_actor_utils"
version = "0.1.0"

description = "Utilities and helpers for building Wasmind actors in Rust"
repository.workspace = true
readme = "README.md"
edition.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/wasmind_actor_utils"

[lib]

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
rand = "0.9"

wasmind_llm_types = { version = "0.1.0", path = "../wasmind_llm_types" }
wasmind_actor_utils_common_messages = { version = "0.1.0", path = "../wasmind_actor_utils_common_messages" }
wasmind_actor_utils_macros = { version = "0.1.0", path = "../wasmind_actor_utils_macros", optional = true }

[features]
default = []
macros = ["wasmind_actor_utils_macros"]
