[package]
name = "wasmind_actor_utils_common_messages"
version = "0.1.0"

description = "Common message types shared between Wasmind actors"
repository.workspace = true
readme = "README.md"
edition.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/wasmind_actor_utils_common_messages"

[lib]

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

wasmind_llm_types = { version = "0.1.0", path = "../wasmind_llm_types" }
