[package]
name = "wasmind_actor_utils_macros"
version = "0.1.0"

description = "Procedural macros for simplifying Wasmind actor development"
repository.workspace = true
readme = "README.md"
edition.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/wasmind_actor_utils_macros"

[lib]
proc-macro = true

[dependencies]
quote = "1"
syn = { version = "2.0", features = ["derive", "parsing" ] }
serde_json = "1"
