[package]
name = "wasmind_cli"
version = "0.1.0"

description = "Command-line interface for Wasmind AI agent coordination system"
keywords = ["cli", "ai", "agents", "wasm", "terminal"]
categories = ["command-line-utilities"]
repository.workspace = true
readme = "README.md"
edition.workspace = true
license.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/wasmind_cli"

default-run = "wasmind_cli"

[features]
default = ["clipboard"]
clipboard = ["dep:cli-clipboard"]

[dependencies]
snafu = { workspace = true }
url = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

wasmind = { version = "0.1.0", path = "../wasmind" }
wasmind_actor_utils = { version = "0.1.0", path = "../wasmind_actor_utils" }
wasmtime = { workspace = true }
wasmtime-wasi = { workspace = true }

rand = "0.9"
throbber-widgets-tui = "0.8"
lazy-regex = "3.4.1"
base64 = "0.22.1"
etcetera = "0.10.0"
image = "0.25.6"
toml = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
reqwest = { workspace = true }
tracing = "0.1.41"
parking_lot = { workspace = true }
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }
tracing-rolling-file = { version = "0.1.3", features = ["non-blocking"] }
futures = "0.3.31"
libc = "0.2"
ratatui = { version = "0.29", features = ["unstable-rendered-line-info", "unstable-widget-ref"] }
chrono = { version = "0.4", features = ["serde"] }
minijinja = { version = "2.6", features = ["builtins"] }
clap = { version = "4.0", features = ["derive"] }
async-trait = "0.1"
tuirealm = { version = "3", default-features = false, features = [ "derive", "crossterm", "async-ports"]}
serde_yaml = { workspace = true }
tempfile = "3"
tui-textarea = "^0.7"
cli-clipboard = { version = "0.4", optional = true }
