[package]
name = "wasmind_config"
version = "0.1.0"

description = "Configuration system for Wasmind actors and runtime"
repository.workspace = true
readme = "README.md"
edition.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/wasmind_config"

[lib]

[dependencies]
snafu = { workspace = true }
url = { workspace = true, features = ["serde"] }
toml = { workspace = true }
serde = { workspace = true, features = ["derive"] }

etcetera = "0.10.0"

[dev-dependencies]
tempfile = { workspace = true }

