[package]
name = "wasmind_llm_types"
version = "0.1.0"

description = "Common LLM API types and structures for AI actors"
repository.workspace = true
readme.workspace = true
edition.workspace = true
license.workspace = true

[lib]

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
