[package]
name = "wasmind_llm_types"
version = "0.1.0"

description = "Common LLM API types and structures for AI actors"
repository.workspace = true
readme = "README.md"
edition.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/wasmind_llm_types"

[lib]

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
